<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:gravity="center">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView1"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/primary_text_light" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView0"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:text="@string/about_label_2"
        android:textColor="@android:color/primary_text_light" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="126dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_giwi" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/about_label_1"
        android:textColor="@android:color/primary_text_light" />

</RelativeLayout>