<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/menu_manage_children"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/primary_text_light" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" />

        <Spinner
            android:id="@+id/listOfChildrenMgt"
            style="@style/CustomTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light" />

        <EditText
            android:id="@+id/childToAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/primary_text_light">

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_child"
                android:textColor="@android:color/primary_text_light" />

            <Button
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_child"
                android:textColor="@android:color/primary_text_light" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/hey" />

</RelativeLayout>