<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/angry_woman"
        android:textColor="@android:color/primary_text_light"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_choose_child"
            android:textColor="@android:color/primary_text_light" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/mainListOfC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7.59"
                android:textColor="@android:color/primary_text_light" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_scold"
                android:textColor="@android:color/primary_text_light" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>